[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yv_xtract"
version = "1.0"
authors = [
  { name="Ricardo Ramirez", email="ricaiditodev@gmail.com" },
]
license = {file = "LICENSE"}
description = "CLI tool to download YouTube videos"
keywords = ["python", "youtube", "video", "downloader", "cli", "mp3", "mp4"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies= ["pytube", "moviepy"]

[project.urls]
"Homepage" = "https://github.com/Ricaidito/youtube_extractor"
"Bug Tracker" = "https://github.com/Ricaidito/youtube_extractor/issues"
"Repository" = "https://github.com/Ricaidito/youtube_extractor.git"

[project.scripts]
yvx = "yv_xtract.yte:main"
